# TokenScope

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
configs/: scoring.example.yaml  sources.example.yaml
configs/registries/: asset_candidates.yaml  assets.yaml  entity_investigation.yaml  source_candidates.yaml
configs/taxonomy/: asset_categories.yaml  source_taxonomy.yaml
data/: README.md
docs/: 00_project_context.md  01_product_vision.md  02_data_strategy.md  03_architecture.md  04_roadmap.md  05_architecture_decisions.md  06_strategic_context_summary.md  07_glossary.md  08_current_state.md  09_delivery_method.md  10_task_registry.md  11_obsidian_project_context.md  12_asset_registry.md  13_source_registry.md
docs/knowledge_base/: INDEX.md
docs/knowledge_base/official/: TOKENSCOPE DDMETODOLOGIA OFICIAL DE.txt
docs/knowledge_base/private_official/: README.md
notebooks/: README.md
outputs/: README.md
schemas/: asset_registry.schema.json  source_registry.schema.json
scripts/: README.md  validate_asset_registry.py  validate_source_registry.py
src/tokenscope_dd/: __init__.py  config.py
src/tokenscope_dd/ai/: README.md  __init__.py
src/tokenscope_dd/benchmark/: __init__.py
src/tokenscope_dd/collection/: __init__.py
src/tokenscope_dd/evidence/: __init__.py
src/tokenscope_dd/io/: __init__.py
src/tokenscope_dd/processing/: __init__.py
src/tokenscope_dd/registry/: __init__.py  fingerprint.py  (+4 more)
tests/unit/: test_config.py
(+18 files in other folders)
